2005-01-11 Duncan Coutts <duncan@coutts.uklinux.net>

	* glib/glib.pkg.in, gtk/gtk.pkg.in, mogul/mogul.pkg.in,
	glade/glade.pkg.in, gconf/gconf.pkg.in, sourceview/sourceview.pkg.in,
	mozembed/mozembed.pkg.in: correct import_dirs. Each module has its own
	directory under the hi difrectory. Also, since all packages now use
	the hierachrical module namespace we can install all packages as 'Auto'
	packages which means that users do not have to specify -package to ghc
	most of the time.

	* Makefile.am: correct the install location for glib package's .hi
	files. Correct a linker error caused by a missing _stub.o file.
	Everything should install correctly now and the demos should build ok.

	* gtk/Graphics/UI/Gtk/Pango/Description.chs, gtk/Graphics/UI/Gtk.hs:
	tiny haddock markup fixes.

2005-01-10 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/apiGen/format-docs.xsl: nicer code and more comprehensively
	deal with various sorts of paragrahps, lists, sections and examples.

	* tools/apiGen/ApiGen.hs: deal with more complicated formatting,
	definition lists, itemised lists, subsections, inline and titled
	program listing examples.

	* tools/apiGen/gen-all.sh: now works with the latest version of gtk

	* tools/apiGen/Template.chs: import System.Glib.FFI rather than
	Foreign, also a couple cosmetic improvements.

	* tools/apicoverage/Makefile: update regexps to match the output of
	current versions of c2hs. The apicoverage tool should now be accurate.

2005-01-09 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/apiGen/format-docs.xsl: fix generation of function version
	numbers when they have no version given.

	* tools/apiGen/ApiGen.hs: Fix for when no functions are defined in the
	documentation file. Also, take the c2hs context prefix and lib values
	from the api file be default.

2005-01-08 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/Graphics/UI/Gtk.hs: commit the grand hierarchical namespace
	conversion. If it all goes wrong, revert back to the tag